<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            android:visible="false"/>

        <item
            android:id="@+id/edit"
            android:title="@string/edit"
            android:visible="false"/>

        <item
            android:id="@+id/profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/block"
            android:title="@string/block" />

        <item
            android:id="@+id/call"
            android:title="@string/call" />

        <item
            android:id="@+id/chat"
            android:title="@string/chat" />

        <item
            android:id="@+id/email"
            android:title="@string/email" />

    </group>
</menu>