<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.aelzohry.topsaleqatar.ui.auth.vm.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            tools:context="ui.auth.LoginActivity">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/login_msg"
                    android:textColor="@color/text_color_black"
                    android:textSize="14sp" />
                <!-- Mobile       -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/new_ad_bg"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/country_code"
                        android:textColor="@color/text_color_black" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="start|center"
                        android:hint="@string/mobile"
                        android:imeOptions="actionGo"
                        android:inputType="phone"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@={vm.etPhone}"
                        android:textColor="@color/text_color_black"
                        android:textSize="14sp" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{(v)->vm.onLoginBtnClickedListener(v)}"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    app:backgroundTint="@color/mainColor"
                    android:textColor="@color/btn_txt_color"
                    android:textSize="16sp"
                    app:cornerRadius="8dp" />

                <LinearLayout
                    android:id="@+id/termsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_info_white_24dp"
                        app:tint="@color/icon_terms_tint" />

                    <TextView
                        android:id="@+id/termsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_black"
                        tools:text="@string/terms" />

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>
    </ScrollView>

</layout>